Add user avatars (#8)
